2002-07-29  Per Bothner  <per@bothner.com>

	* kawa/standard/prim_throw.java (primitiveThrow):  New static field.
	* kawa/standard/Scheme.java (initScheme):  Define "primitive-throw"
	using define_field, so it can be inlined.

2002-07-28  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (getNamedType):  Define <never-returns>.

2002-07-25  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite_pair):  Remove some optimizations,
	and argument count checking.  They are now done in InlineCalls.

2002-07-24  Per Bothner  <per@bothner.com>

	* kawa/Shell.java (run):  Update for gnu.expr changes.
	* kawa/standard/load.java (loadSource):  Likewise.
	* kawa/lang/CompileFile.java:  Likewise.
	(read):  Return Compilation instead of ModuleExp.
	(compile_to_file):  Catch compile-time exceptions.
	* kawa/lang/Eval.java (evalBody):  Updates.
	* kawa/lang/Translator.java:  Update Parser -> Compilation.
	Replace current_line etc by Compilation's getLine etc methods.
	(module, getModule):  Now in Compilation.
	* kawa/standard/Scheme.java (makeModuleExp):  Moved to LispInterpreter.

	* kawa/lang/Translator.java (matches):  New method.
	* kawa/standard/define.java (rewriteForm):  Use new matches method.
	* kawa/standard/let.java (write):  Likewise.

2002-07-21  Per Bothner  <per@bothner.com>

	* kawa/standard/map.java (inline):  Take extra ExpWalker parameter.

	* kawa/lang/Translator.java (rewrite_pair):  Check for dotted list.

2002-07-02  Per Bothner  <per@bothner.com>

	* kawa/standard/string_append.java (stringAppend$V):  Remove
	needless toString - which also make it null-safe.

	* kawa/standard/ScmEnv.java:  Remove unneeded (and harmful) import.

2002-06-26  Per Bothner  <per@bothner.com>

	* build.xml:  Update XMLParser.java -> XMLParserChar.java.
	
	* build.xml (lib-scm-2nd):  Add arrays.scm.
	(slib-scm):  Add srfi1.scm.

2002-06-13  Per Bothner  <per@bothner.com>

	* build.xml (java-classes):  Add gnu/kawa/util/.  Reported by