@@ -1,3 +1,9 @@
+2002-08-02  Per Bothner  <per@bothner.com>
+
+	* kawa/standard/expt.java (expt):  New static methods.
+	(expt)  New static final field.
+	* kawa/standard/Scheme.java (initScheme):  Use define_field for "expt".
+
 2002-07-29  Per Bothner  <per@bothner.com>
 
 	* kawa/standard/prim_throw.java (primitiveThrow):  New static field.
